--- a/src/components/workPlace/workPlace.css
+++ b/src/components/workPlace/workPlace.css
@@ -1,6 +1,10 @@
 .work-place-widget-main{
+    display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
     overflow-y: auto;
+    width: 100%;
+    height: 100%;
 }
 
 .top-left-setting{
