change work place

--- a/src/components/workPlace/workPlace.css
+++ b/src/components/workPlace/workPlace.css
@@ -1,7 +1,6 @@
 .work-place-widget-main{
     display: flex;
-    flex-direction: row;
-
+    flex-direction: column;
     overflow-y: auto;
     width: 100%;
     height: 100%;
