--- a/src/components/workPlace/lineWorkPlace/lineWorkPlace.css
+++ b/src/components/workPlace/lineWorkPlace/lineWorkPlace.css
@@ -3,4 +3,19 @@
     flex-direction: row;
     width: 100%;
     min-height: 10%;
+    margin-bottom: 5px;
+}
+
+.drop-conteiner{
+    position: fixed;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+}
+
+.drop{
+    z-index: 0;
+    width: 10%;
 }
