--- a/src/components/workPlace/lineWorkPlace/lineWorkPlace.css
+++ b/src/components/workPlace/lineWorkPlace/lineWorkPlace.css
@@ -6,6 +6,17 @@
     margin-bottom: 5px;
 }
 
+.line-conteiner{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    min-height: 100%;
+    flex-wrap: wrap;
+    margin: 5px;
+    background-color: red;
+}
+
 .drop-conteiner{
     position: fixed;
     display: flex;
